services/serviceA/envoy.yaml
stats_sinks:
  -
    name: "envoy.statsd"
    config:
      tcp_cluster_name: "statsd-exporter"
      prefix: service-a 

tracing:
  http:
    name: envoy.zipkin
    config:
      collector_cluster: zipkin
      collector_endpoint: "/api/v1/spans"

admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: "0.0.0.0"
      port_value: 9901
static_resources:
  listeners:

    -
      name: "service-a-svc-http-listener"
      address:
        socket_address:
          address: "0.0.0.0"
          port_value: 3001
      filter_chains:
        -
          filters:
            -
              name: "envoy.http_connection_manager"
              config:
                access_log:
                - name: envoy.file_access_log
                  config:
                    path: /dev/stdout
                    json_format:
                      start: "%START_TIME%"
                      protocol: "%PROTOCOL%"
                      method: "%REQ(:METHOD)% "
                      upstream: "%UPSTREAM_HOST%"
                      duration: "%DURATION%"
                      response_tx_duration: "%RESPONSE_TX_DURATION%"
                      response_duration: "%RESPONSE_DURATION%"
                      response_code: "%RESPONSE_CODE%"
                stat_prefix: "ingress_3001"
                codec_type: "AUTO"
                route_config:
                  name: "service-a-svc-http-route"
                  virtual_hosts:
                    -
                      name: "service-a-svc-http-route"
                      domains:
                        - "*"
                      routes:
                        -
                          match:
                            prefix: "/"
                          route:
                            cluster: "service_a"
                http_filters:
                  -
                    name: "envoy.router"
    -
      name: "service-b-svc-http-listener"
      address:
        socket_address:
          address: "0.0.0.0"
          port_value: 8881
      filter_chains:
        -
          filters:
            -
              name: "envoy.http_connection_manager"
              config:
                access_log:
                - name: envoy.file_access_log
                  config:
                    path: /dev/stdout
                    json_format:
                      start: "%START_TIME%"
                      protocol: "%PROTOCOL%"
                      method: "%REQ(:METHOD)% "
                      upstream: "%UPSTREAM_HOST%"
                      duration: "%DURATION%"
                      response_tx_duration: "%RESPONSE_TX_DURATION%"
                      response_duration: "%RESPONSE_DURATION%"
                      response_code: "%RESPONSE_CODE%"
                stat_prefix: "egress_3002"
                codec_type: "AUTO"
                tracing: 
                  operation_name: 1
                  request_headers_for_tags: "TEST,serviceA"
                route_config:
                  name: "service-b-svc-http-route"
                  virtual_hosts:
                    -
                      name: "service-b-svc-http-route"
                      domains:
                        - "*"
                      routes:
                        -
                          match:
                            prefix: "/"
                          route:
                            cluster: "service_b"
                http_filters:
                  -
                    name: "envoy.router"

                        
  clusters:
    - name: zipkin
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: zipkin
            port_value: 9411

    - name: "statsd-exporter"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        -
          socket_address:
            address: "statsd_exporter"
            port_value: 9125
    - name: "service_a"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        -
          socket_address:
            address: "service_a"
            port_value: 8080  
            
    - name: "service_b"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        -
          socket_address:
            address: "service_b_envoy"
            port_value: 3002
